[tool.poetry]
name = "previous"
version = "0.1.0"
description = ""
authors = ["Tag-Epic <tagepicuwu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "git+https://github.com/nextcord/nextcord.git#master"
jishaku = "2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
