[tool.poetry]
name = "previous"
version = "0.1.0"
description = "The support bot for nextcord"
authors = ["Tag-Epic <tagepicuwu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "git+https://github.com/nextcord/nextcord.git#master"
jishaku = "2.4.0"
algoliasearch = "^2.6.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
